# deepseek-chat

./: README.md  middleware.ts  package.json  pnpm-lock.yaml
app/: page.tsx
app/api/auth/: types.ts
app/api/auth/login/: route.ts
app/api/auth/me/: route.ts
app/api/auth/refresh/: route.ts
app/login/: page.tsx
components/: Conversation.tsx  ConversationFetcher.tsx  Navbar.tsx
rest/: Cargo.toml  build.rs
rest/sqlite/: deepseek_chat.db
rest/src/: auth.rs  main.rs
rest/src/auth/: mod.rs  types.rs
rest/src/conversation/: mod.rs  types.rs
rest/src/tests/: mod.rs
