[package]
name = "restchat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-native-tls"] }
bcrypt = "0.15.1"
dotenv = "0.15.0"
hyper = { version = "1.0", features = ["full"] }
